# Lesson_behave

./: .flake8  .gitignore  Linda_login.feature  README.md  TaPi-login-so.feature  TaPi-login.feature  browser.py  environment.py  functions.py  page.py  pyproject.toml
Gaiane_python/: gn_Gaiane_functions.py  list.py  variables_Gaiane.py
features/: AD-login.feature  AD-login_so.feature  Amitha_EnterLogBook.feature  Linda_change_psw.feature  Linda_fill_out_My_Profile.feature  Linda_login.feature  NN-login.feature  TaPi-login-feature  TaPi-login-so.feature  TaPi-login.feature  ag-login.feature  al-login.feature  am-demo_jump.feature  am-device_settings.feature  am-device_settings_so.feature  am-forgot_password.feature  am-login.feature  am-login_so.feature  am-registration.feature  amitha_Homepage_so.feature  amitha_login_so.feature  anKr-login.feature  anKr_demo_Jump.feature  anKr_login_so.feature  anKr_login_table.feature  anKr_user_forgot_pass.feature  ant-devices.feature  ant-login.feature  gn-login.feature  kd-calculator.py  kd-devices.feature  kd-login.feature  login.feature  login_so.feature  lstark_generate_demo_jump.feature  lstark_login.feature  lstark_login_so.feature  sm-login.feature  sm-login_so.feature
pages/: am_login_page.py  login.py
python/: AD_Converter_L-11.py  AD_Lists_Calc_L-10.py  AD_Lists_Calculator.py  AD_conditions.py  AD_conditions_loops_L-11.py  AD_lists.py  AD_loops.py  Amitha_PythonPractice.py  LInda_def.py  LInda_loop.py  Linda_calc.py  Linda_classes.py  Linda_condition.py  Linda_fjldsjf;sldjfl.py  Linda_functions.py  Linda_loooops.py  (+84 more)
(+14 files in other folders)
