[tool.poetry]
name = "Lesson-behave"
version = "0.1.0"
description = ""
authors = ["Andrey <baykov.andrey@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
poetry-core = "^2.1.3"
playwright = "^1.54.0"
behave = "^1.2.6"
requests = "^2.32.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
